--- a/src/main/resources/JavaScript/JavaScriptParLaPratique/AJAX/ajax.html
+++ b/src/main/resources/JavaScript/JavaScriptParLaPratique/AJAX/ajax.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<div id="allposts"></div>
+
+<script>
+    const BaseUrl = 'https://jsonplaceholder.typicode.com'
+    const allposts = document.querySelector('#allposts')
+    tableau = []
+
+    fetch(`${BaseUrl}/posts`)
+        .then(response => {
+            return response.json()
+        }).then(json => {
+
+        console.log(json)
+        json.forEach(mp => {
+            tableau.push(mp)
+            displayJson(tableau);
+        })
+
+    })
+
+    function displayJson(tableau) {
+        const tableauAAffiche = tableau.map(element => {
+            return `<li>${element.title}</li>`
+        }).join('')
+        allposts.innerHTML = tableauAAffiche;
+    }
+
+</script>
 </body>
 </html>
